Added all the swagger API entries
