# server/src/main/java/tk/artiquno/warehouse/management/configurations/handlers/ErrorResponse.java
@@ -1,10 +1,0 @@
-package tk.artiquno.warehouse.management.configurations.handlers;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-
-@Data
-@AllArgsConstructor
-public class ErrorResponse {
-    private String message;
-}
