# server/src/main/java/tk/artiquno/warehouse/management/configurations/handlers/GlobalExceptionHandler.java
@@ -7,6 +7,7 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import tk.artiquno.warehouse.management.exceptions.StatusCodeException;
+import tk.artiquno.warehouse.management.swagger.dto.ErrorResponse;
 
 import javax.persistence.EntityNotFoundException;
 
@@ -19,12 +20,15 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(EntityNotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
     public @ResponseBody ErrorResponse handleException(EntityNotFoundException ex) {
-        return new ErrorResponse(ex.getMessage());
+        return new ErrorResponse()
+                .message(ex.getMessage());
     }
 
     @ExceptionHandler(StatusCodeException.class)
     public ResponseEntity<ErrorResponse> handleException(StatusCodeException ex) {
+        ErrorResponse errorResponse = new ErrorResponse()
+                .message(ex.getMessage());
         return ResponseEntity.status(ex.getStatus())
-                .body(new ErrorResponse(ex.getMessage()));
+                .body(errorResponse);
     }
 }
